<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Gather Englsih</string>
    <string name="launch_text">Tap Anywhere To Continue</string>
    <string name="back_button">Back Button</string>
    <string name="x_button">X</string>

    <!-- Bottom Nav Bar -->
    <string name="nav_setting_title">Setting</string>
    <string name="nav_home_title">Home</string>
    <string name="nav_dashboard_title">Dashboard</string>

    <!-- Home -->
    <string name="home_text">Welcome, Username</string>
    <string name="gather_new_card_btn">Gather New Card</string>
    <string name="card_gallery_btn">Card Gallery</string>
    <string name="exercise_btn">Exercise</string>
    <string name="mascot">Mascot</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Dashboard -->
    <string name="dashboard_text">Username</string>
    <string name="progress_report">Progress Report</string>
    <string name="flashcard_collected">Flashcard \nCollected</string>
    <string name="progression">0/10</string>
    <string name="flashcard_updated">Flashcard \nUpdated</string>
    <string name="stat_value">0</string>
    <string name="exercise_completed">Exercise \nCompleted</string>
    <string name="correct_answer">Correct \nAnswer</string>
    <string name="total_question">Total \nQuestion</string>

    <!-- Exercise -->
    <string name="listening_btn">Listening</string>
    <string name="spelling_btn">Spelling</string>
    <string name="reading_btn">Reading</string>
    <string name="listening_title">Listening</string>
    <string name="question_desc">Question X</string>
    <string name="audio_button">Audio Button</string>
    <string name="submit_btn">Submit</string>
    <string name="letters">Letters</string>
    <string name="spelling_desc">Fill in the word of the given diagram.</string>
    <string name="spelling_title">Spelling</string>
    <string name="reading_title">Reading</string>

    <!-- Gallery -->
    <string name="coin_image">coin image</string>
    <string name="coin">0</string>
    <string name="card_diagram_description">Card Diagram</string>
    <string name="card_title_description">Card Title</string>
    <string name="gallery_desc">Gallery</string>

    <!-- Result Page -->
    <string name="result_title">Result</string>
    <string name="result_trophy_image">trophyImage</string>
    <string name="result_congrat_txt">Hey, Congratulations!</string>
    <string name="result_finish_btn">FINISH</string>


</resources>