<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.gatherenglsih.HomeFragment"
        android:label="@string/nav_home_title"
        tools:layout="@layout/fragment_home" />

    <fragment

        android:id="@+id/navigation_dashboard"
        android:name="com.example.gatherenglsih.DashboardFragment"
        android:label="@string/nav_dashboard_title"
        tools:layout="@layout/fragment_dashboard" />

    <fragment

        android:id="@+id/navigation_setting"
        android:name="com.example.gatherenglsih.SettingsFragment"
        android:label="@string/nav_setting_title"
        tools:xml="@xml/root_preferences" />
</navigation>