<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="200dp"
    android:layout_height="400dp"
    android:layout_gravity="center"
    android:elevation="10dp"
    android:orientation="vertical"
    app:cardCornerRadius="20dp">

        <ImageView
            android:id="@+id/popup_obtained_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/chair1"
            android:contentDescription="@string/card_diagram_description" />

        <TextView
            android:id="@+id/popup_close_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="end"
            android:gravity="center"
            android:text="@string/x_button"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/card_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="23sp"
            android:layout_marginBottom="30dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_gravity="center|bottom"
            android:text="@string/card_title_description" />

</androidx.cardview.widget.CardView>