<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/ic_bg"
    tools:context=".SpellingExercise">

    <RelativeLayout
        android:id="@+id/spelling_top_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/spelling_ExitBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="15dp"
            android:layout_marginTop="3dp"
            android:contentDescription="@string/back_button"
            app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24" />

        <TextView
            android:id="@+id/spellingTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_toEndOf="@+id/spelling_ExitBtn"
            android:text="@string/spelling_title"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <TextView
        android:id="@+id/spelling_textScreen"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textColor="#FFF"
        android:textSize="22sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spelling_desc" />

    <LinearLayout
        android:layout_gravity="center"
        android:background="@drawable/bgquestion"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp">

        <TextView
            android:textAlignment="center"
            android:id="@+id/spellingQuestionNo"
            android:textColor="#332FA2"
            android:layout_marginTop="5dp"
            android:textSize="20sp"
            android:layout_width="220dp"
            android:lineSpacingExtra="6dp"
            android:layout_height="wrap_content"
            android:text="@string/question_desc" />

        <ImageView
            android:id="@+id/spelling_ques_diagram"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/card_diagram_description"
            android:scaleType="fitXY"
            android:src="@drawable/chair" />

        <EditText
            android:id="@+id/spellingEditText"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/bgpurple"
            android:clickable="false"
            android:focusable="false"
            android:gravity="center"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="#332FA2"
            android:textSize="32sp"
            tools:ignore="LabelFor" />
    </LinearLayout>

    <TextView
        android:id="@+id/spellingLettersTitle"
        android:text="@string/letters"
        android:textSize="24sp"
        android:textColor="#FFF"
        android:layout_marginRight="28dp"
        android:layout_marginLeft="28dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/spellingSelectionLayoutParent"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        </LinearLayout>
    </HorizontalScrollView>




</LinearLayout>