<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/exe_bg"
    android:orientation="vertical"
    tools:context=".HomeFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#D9C4D3FB"
        android:layout_gravity="center"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/gathercard_btn"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="380dp"
                android:layout_marginTop="-10dp"
                android:contentDescription="@string/mascot"
                android:src="@drawable/gigi" />

            <TextView
                android:id="@+id/homeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-70dp"
                android:gravity="center|bottom"
                android:text="@string/home_text"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="italic|bold" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/gathercard_btn"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="20dp"
        android:text="@string/gather_new_card_btn">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/gather_card_button"
            android:scaleType="fitXY"/>

    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:id="@+id/buttons_frame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:weightSum="2">

        <androidx.cardview.widget.CardView
            android:id="@+id/gallery_btn"
            android:layout_width="0dp"
            android:layout_height="130dp"
            android:layout_marginEnd="10dp"
            app:cardCornerRadius="20dp"
            android:layout_weight="1"
            android:text="@string/card_gallery_btn">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/gallery_btn"
                android:scaleType="fitXY"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/exercise_btn"
            android:layout_width="0dp"
            android:layout_height="130dp"
            android:layout_weight="1"
            app:cardCornerRadius="20dp"
            android:text="@string/exercise_btn">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/exe_btn"
                android:scaleType="fitXY"/>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>