<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg"
    tools:context=".ReadingExercise"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/spelling_top_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/reading_ExitBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="15dp"
            android:layout_marginTop="3dp"
            android:contentDescription="@string/back_button"
            app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24" />

        <TextView
            android:id="@+id/readingTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_toEndOf="@+id/reading_ExitBtn"
            android:text="@string/reading_title"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:id="@+id/spelling_textScreen"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textColor="#FFF"
        android:textSize="22sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Read into microphone the word given" />

    <LinearLayout
        android:layout_gravity="center"
        android:background="@drawable/bgquestion"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp">

        <TextView
            android:textAlignment="center"
            android:id="@+id/readingQuestionNo"
            android:textColor="#332FA2"
            android:layout_marginTop="5dp"
            android:textSize="20sp"
            android:layout_width="220dp"
            android:lineSpacingExtra="6dp"
            android:layout_height="wrap_content"
            android:text="@string/question_desc" />

        <ImageView
            android:id="@+id/reading_ques_diagram"
            android:layout_width="180dp"
            android:layout_height="220dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/card_diagram_description"
            android:scaleType="fitXY"
            android:src="@drawable/chair" />

        <TextView
            android:id="@+id/reading_ques_word"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="chair"
            android:textAllCaps="true"
            android:layout_marginBottom="30dp"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_gravity="center"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/reading_mic_button"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_baseline_mic_24"
        android:layout_gravity="center"
        app:tint="@color/black" />

    <Button
        android:id="@+id/reading_submit_button"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_gravity="center|bottom"
        android:textSize="18sp"
        android:background="@drawable/bgbtn"
        android:text="@string/submit_btn"/>


</LinearLayout>