<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#0c2c6c"
    tools:context=".CardView"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/top_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        >

        <ImageView
            android:id="@+id/cardViewExitBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="15dp"
            android:layout_marginTop="3dp"
            app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24_white"
            android:contentDescription="@string/back_button" />

        <TextView
            android:id="@+id/galleryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_toEndOf="@+id/cardViewExitBtn"
            android:text="@string/gallery_desc"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <LinearLayout
            android:id="@+id/coin_frame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end"
            android:layout_marginEnd="30dp"
            android:gravity="center"
            tools:ignore="RelativeOverlap,UseCompoundDrawables">

            <ImageView
                android:id="@+id/coinImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/coin_image"
                app:layout_constraintBottom_toBottomOf="@+id/coinText"
                app:layout_constraintEnd_toStartOf="@+id/coinText"
                app:layout_constraintHorizontal_bias="0.232"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/coinText"
                app:layout_constraintVertical_bias="0.4"
                app:srcCompat="@drawable/ic_baseline_coin_on_24"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/cardView_coinText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:text="@string/coin"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"/>
        </LinearLayout>
    </RelativeLayout>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginTop="70dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:translationZ="1dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/card_view_diagram"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="40dp"
                android:scaleType="fitXY"
                android:src="@drawable/chair1"
                android:contentDescription="@string/card_diagram_description" />

            <TextView
                android:id="@+id/card_view_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-38dp"
                android:textSize="23sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:text="@string/card_title_description" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="-45dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="#e9eae3"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp">

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-33dp"
        android:translationZ="60dp"
        android:layout_gravity="center">


        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/audio_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/circle_button_style"
            android:src="@drawable/ic_baseline_volume_up_24"
            tools:ignore="SpeakableTextPresentCheck" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/upgrade_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/circle_button_style"
            android:src="@drawable/ic_baseline_upgrade_24"
            tools:ignore="SpeakableTextPresentCheck"
            android:visibility="invisible" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/swap_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/circle_button_style"
            android:src="@drawable/ic_baseline_find_replace_24"
            tools:ignore="SpeakableTextPresentCheck" />

    </LinearLayout>


</LinearLayout>