<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#0c2c6c"
    tools:context=".CardGallery">

    <RelativeLayout
        android:id="@+id/top_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        >

        <ImageView
            android:id="@+id/exitBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="15dp"
            android:layout_marginTop="2dp"
            app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24_white"
            android:contentDescription="@string/back_button" />

        <TextView
            android:id="@+id/cardViewText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_toEndOf="@+id/exitBtn"
            android:text="@string/gallery_desc"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/coin_frame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end"
            android:layout_marginEnd="30dp"
            android:gravity="center"
            tools:ignore="RelativeOverlap,UseCompoundDrawables">

            <ImageView
                android:id="@+id/coinImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/coin_image"
                app:layout_constraintBottom_toBottomOf="@+id/coinText"
                app:layout_constraintEnd_toStartOf="@+id/coinText"
                app:layout_constraintHorizontal_bias="0.232"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/coinText"
                app:layout_constraintVertical_bias="0.4"
                app:srcCompat="@drawable/ic_baseline_coin_on_24"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/coinText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:text="@string/coin"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/grid_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_panel">

        <GridView
            android:id="@+id/cards_gridView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="25dp"
            android:horizontalSpacing="10dp"
            android:numColumns="2"
            android:verticalSpacing="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.013" />
    </LinearLayout>


</LinearLayout>